# pai

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  release.sh
assets/: agent.cast  gen.cast  graph.cast
src/pai/: cli.py  code_exec.py  console.py  history.py  repl.py  util.py
src/pai/llms/: chat_gpt.py  fake.py  llama.py  llm.py  llm_protocol.py
