[tool.poetry]
name = "pai-repl"
version = "0.1.11"
description = "Python REPL with LLM integration"
authors = ["Alex Wiles <xwiles@gmail.com>"]
readme = "README.md"
packages = [{ include = "pai", from = "./src" }]

[tool.poetry.scripts]
pai = "pai.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "2.1.1"
openai = "0.27.8"
prompt_toolkit = "3.0.39"
llama-cpp-python = "^0.1.78"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
