[tool.poetry]
name = "pai-repl"
version = "0.1.19"
description = "Python REPL with LLM integration"
authors = ["Alex Wiles <xwiles@gmail.com>"]
readme = "README.md"
packages = [{ include = "pai", from = "./src" }]

[tool.poetry.scripts]
pai = "pai.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
openai = "0.27.8"
prompt_toolkit = "3.0.39"

# optional dependencies that require compilation
llama-cpp-python = { version = "^0.1.78", optional = true }

[tool.poetry.extras]
llama = ["llama-cpp-python"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
